--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.3.3",
+    "@elysiajs/jwt": "^1.3.2",
+    "@supabase/supabase-js": "^2.53.0",
+    "dotenv": "^17.2.1",
     "elysia": "latest"
   },
   "devDependencies": {
