--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/cookie": "^0.3.0-rc.3",
     "@elysiajs/cors": "^1.3.3",
     "@elysiajs/jwt": "^1.3.2",
-    "@supabase/supabase-js": "^2.53.0",
+    "@supabase/supabase-js": "^2.56.0",
     "dotenv": "^17.2.1",
-    "elysia": "latest"
+    "elysia": "^1.2.0-rc.3"
   },
   "devDependencies": {
     "bun-types": "latest"
